fixed non mobile
added height 250 back to home singles, screwed up mobile headline/date
a bit, will adjust to fix in mobile (just not tonight!)

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -108,6 +108,7 @@
     .latest-entries {
         .single-entry {
             position: relative;
+            height: 250px;
             h3 {
                 font-size: 1.25em;
                 a {
